Picture subsystem improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -454,8 +454,11 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="font-style: italic;">unsigned int Picture::get_image_width()
         const;</span> – Return image width in pixels.<br>
       <span style="font-style: italic;">unsigned int Picture::get_image_height()
-        const;</span> – Return image height in pixels.<span style="font-style: italic;"></span></big><big>
-    </big>
+        const;</span> – Return image height in pixels.<br>
+    </big><big><span style="font-style: italic;">size_t
+        Picture::get_image_lenght() const;</span> – Return image length in
+      bytes.</big><br>
+    <big> </big>
     <h2><a class="mozTocH2" name="mozTocId501089"></a><big>Chapter 4. Animation
         subsystem</big></h2>
     <big> <span style="text-decoration: underline;">Very important subsystems</span><br>
@@ -2072,6 +2075,8 @@ Multimedia API</a>. </big>
         6.0.2 – Small changes.<br>
         6.0.3 – Background subsystem and sprite subsystem improved.<br>
         6.0.4 – Small changes.<br>
+        6.0.5 – Picture subsystem improved.<br>
+        6.0.6 – Small changes.<br>
       </big></span>
   </body>
 </html>
