--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -2076,7 +2076,7 @@ Multimedia API</a>. </big>
         6.0.3 – Background subsystem and sprite subsystem improved.<br>
         6.0.4 – Small changes.<br>
         6.0.5 – Picture subsystem improved.<br>
-        6.0.6 – Small changes.<br>
+        6.0.6 – 6.0.7 – Small changes.<br>
       </big></span>
   </body>
 </html>
